--- a/style.css
+++ b/style.css
@@ -1,48 +1,153 @@
-.principal {
-    background: #CCCCCC;
-    padding-top: 15px;
-    padding-bottom: 15px;
+header {
+    background: #BBBBBB;
+    padding: 20px 0;
 }
 
-#banner {
-    width: 100%;
+.caixa {
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 }
 
-.titulo-principal {
-    padding-left: 20px;
+nav {
+    position: absolute;
+    top: 110px;
+    right: 0;
 }
 
-p {
-    text-align: center;
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
 }
 
-#missao {
-    font-size: 20px
+nav a {
+    color: #000000;
+    font-size: 22px;
+    font-weight: bold;
+    text-decoration: none;
+    text-transform: uppercase;
 }
 
-em strong {
-    color: rgb(255, 0, 150);
+nav a:hover {
+    color: #088C19;
+    text-decoration: underline;
 }
 
-.titulo-centralizado {
-    text-align: center;
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
 }
 
-ul {
+.produtos li {
     display: inline-block;
-    width: 20%;
+    width: 30%;
+    text-align: center;
     vertical-align: top;
-    margin-right: 15%;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border: #000000 2px solid;
+    border-radius: 10px;
+    font-size:10px
 }
 
-.itens {
-    font-style: italic;
+.produtos li:hover {
+    border-color: #C78C19;
 }
 
-.imagem-alinhada {
+.produtos li:active {
+    border-color: #088C19;
+}
+
+.produtos li:hover h2 {
+    font-size: 34px;
+}
+
+h2 {
+    font-weight: bold;
+    font-size: 30px;
+}
+
+.produtos-descricao {
+    font-size: 18px;
+}
+
+.produtos-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
+}
+
+footer {
+    text-align: center;
+    background: url("bg.jpg");
+    padding: 40px 0;
+}
+
+.copyright {
+    color: #FFFFFF;
+    margin: 20px 0 0;
+    size: 13px;
+}
+
+main {
+    width: 940px;
+    margin: 0 auto;
+}
+
+.input-text {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
     width: 50%;
 }
 
-/* O efeito cascata só é válido para tag, não para classe e id */
+form {
+    margin: 40px 0;
+}
+
+form label, form legend {
+    display:block;
+    font-size: 20px;
+    margin: 0 0 10px;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    color: white;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    background: orange;
+    transition: 1s all;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 0 40px;
+}
+
+thead {
+    background: gray;
+    color: white;
+    font-weight: bold;
+}
+
+th, td {
+    border: solid black 1px;
+    padding: 8px 15px;
+}
 
 
